fixed overflow issue with table

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,10 +1,7 @@
 @import "tailwindcss";
 @tailwind utilities;
 
-body {
-  margin: 0;
-  padding: 0;
-}
+
 
 
 button:hover {
